@@ -7198,6 +7198,8 @@ void CLASS adobe_coeff (const char *t_make, const char *t_model)
 	{ 7575,-2159,-571,-3722,11341,2725,-1434,2819,6271 } },
     { "Olympus E-PM2", 0, 0,
 	{ 8380,-2630,-639,-2887,10725,2496,-627,1427,5438 } },
+    {"Olympus E-M1", 0, 0,
+     { 8975,-2890,-740,-3324,10899,2708,-1057,2273,5770 } },
     { "Olympus E-M5", 0, 0xfe1,
 	{ 8380,-2630,-639,-2887,10725,2496,-627,1427,5438 } },
     { "Olympus SP350", 0, 0,
